[gd_scene load_steps=19 format=3 uid="uid://cr5qf5i6qewm8"]

[ext_resource type="Script" path="res://nodes/GAME.gd" id="1_4b1f3"]
[ext_resource type="PackedScene" uid="uid://jwbatjrd1wl2" path="res://nodes/GameField.tscn" id="1_unisr"]
[ext_resource type="Texture2D" uid="uid://ci0wgmt623rqk" path="res://assets/textures/Panels.png" id="2_1gq0y"]
[ext_resource type="Texture2D" uid="uid://bgkxnq1p0b2kd" path="res://assets/textures/Buttons.png" id="3_65sse"]
[ext_resource type="PackedScene" uid="uid://duebklrl317w2" path="res://nodes/buttons/SwitchButton.tscn" id="3_h0war"]
[ext_resource type="PackedScene" uid="uid://b0xgehr30hs6k" path="res://nodes/buttons/MyTextureButton.tscn" id="6_p75vb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cvfim"]
atlas = ExtResource("3_65sse")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1641d"]
atlas = ExtResource("3_65sse")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k82lx"]
atlas = ExtResource("3_65sse")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_64is7"]
atlas = ExtResource("3_65sse")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_io52u"]
atlas = ExtResource("3_65sse")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cavlm"]
atlas = ExtResource("3_65sse")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1f6f"]
atlas = ExtResource("3_65sse")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8iujy"]
atlas = ExtResource("3_65sse")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsjfe"]
atlas = ExtResource("3_65sse")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w00dn"]
atlas = ExtResource("3_65sse")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0755h"]
atlas = ExtResource("3_65sse")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qn5mv"]
atlas = ExtResource("3_65sse")
region = Rect2(0, 128, 32, 32)

[node name="GAME" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4b1f3")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="GameField" parent="Margin" instance=ExtResource("1_unisr")]
layout_mode = 2

[node name="Screen" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Container" type="MarginContainer" parent="Screen"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
mouse_filter = 2

[node name="Background" type="NinePatchRect" parent="Screen/Container"]
layout_mode = 2
texture = ExtResource("2_1gq0y")
region_rect = Rect2(0, 0, 16, 16)
patch_margin_left = 12
patch_margin_top = 4
patch_margin_right = 12
patch_margin_bottom = 4

[node name="MarginContainer" type="MarginContainer" parent="Screen/Container"]
layout_mode = 2
mouse_filter = 2

[node name="GridContainer" type="GridContainer" parent="Screen/Container/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="Screen/Container/MarginContainer/GridContainer"]
layout_mode = 2
text = "Geschwindigkeit"

[node name="TimeSlider" type="HSlider" parent="Screen/Container/MarginContainer/GridContainer"]
layout_mode = 2
value = 50.0

[node name="PlayButton" parent="Screen/Container/MarginContainer/GridContainer" instance=ExtResource("3_h0war")]
layout_mode = 2
on = true
tex_on = SubResource("AtlasTexture_cvfim")
tex_off = SubResource("AtlasTexture_1641d")

[node name="DeleteButton" parent="Screen/Container/MarginContainer/GridContainer" instance=ExtResource("6_p75vb")]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_k82lx")
texture_pressed = SubResource("AtlasTexture_64is7")
texture_hover = SubResource("AtlasTexture_io52u")
texture_disabled = SubResource("AtlasTexture_cavlm")
tex = SubResource("AtlasTexture_k1f6f")

[node name="RandomButton" parent="Screen/Container/MarginContainer/GridContainer" instance=ExtResource("6_p75vb")]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_8iujy")
texture_pressed = SubResource("AtlasTexture_qsjfe")
texture_hover = SubResource("AtlasTexture_w00dn")
texture_disabled = SubResource("AtlasTexture_0755h")
tex = SubResource("AtlasTexture_qn5mv")

[connection signal="value_changed" from="Screen/Container/MarginContainer/GridContainer/TimeSlider" to="." method="_on_time_slider_value_changed"]
[connection signal="pressed" from="Screen/Container/MarginContainer/GridContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Screen/Container/MarginContainer/GridContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="Screen/Container/MarginContainer/GridContainer/RandomButton" to="." method="_on_random_button_pressed"]
